--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.20",
     "socket.io": "^4.1.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   }
 }
