--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-fetch": "^1.7.3",
     "nodemon": "^2.0.20",
     "socket.io": "^4.1.2"
   },
