--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "node-fetch": "^1.7.3",
     "nodemon": "^2.0.20",
     "socket.io": "^4.1.2"
