--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "moment": "^2.29.4",
     "node-fetch": "^1.7.3",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "winston": "^3.8.2"
   },
   "scripts": {
     "start": "nodemon index.js"
