--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.4.0",
     "formidable": "^2.1.1",
     "moment": "^2.29.4",
     "node-fetch": "^1.7.3",
     "node-static": "^0.7.11",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.4.1",
+    "request": "^2.88.2",
     "socket.io": "^4.1.2",
     "winston": "^3.8.2"
   },
